[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/backgrounds/produce_aisle/music/produce_aisle.mp3" type="AudioStream" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://background_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://grape.tscn" type="PackedScene" id=4]
[ext_resource path="res://aisle.tscn" type="PackedScene" id=5]
[ext_resource path="res://main.gd" type="Script" id=6]
[ext_resource path="res://assets/GameOver.wav" type="AudioStream" id=7]
[ext_resource path="res://mushroom.tscn" type="PackedScene" id=8]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://tutorial.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/menu.png" type="Texture" id=11]
[ext_resource path="res://assets/Victory.wav" type="AudioStream" id=12]
[ext_resource path="res://pepper.tscn" type="PackedScene" id=13]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 17, 185, 0, 0, 0, 0, 399, 461, 0, 0, 0, 0, 570, 570, 0, 0, 0, 0, 86, 300, 0, 0, 0, 0, 27, 200, 0, 0, 0, 0, 24, 169, 0, 0, 0, 0, 114, 115, 0, 0, 0, 0, 176, 80, 0, 0, 0, 0, 223, 107, 0, 0, 0, 0, 261, 126, 0, 0, 0, 0, 286, 142, 0, 0, 0, 0, 314, 159, 0, 0, 0, 0, 382, 201, 0, 0, 0, 0, 437, 235, 0, 0, 0, 0, 491, 268, 0, 0, 0, 0, 533, 297, 0, 0, 0, 0, 570, 322 )
}

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 89, 20, 5, 64, 1, 2, 103, 21, 593, 298, 296, 156, 188, 89, 392, 433, 565, 336, 599, 323, 466, 419, 315, 496, 277, 522, 605, 510, 603, 601, 401, 605, 259, 593, 228, 566, 202, 599, 57, 35, 33, 177, 3, 160, 83, 350, 58, 372, 5, 389, 145, 255, 142, 278, 299, 375, 228, 537, 201, 511, 125, 464, 67, 416, 256, 200, 300, 175 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 3, 4, 5, 6 ), PoolIntArray( 7, 8, 9, 10, 11 ), PoolIntArray( 12, 11, 10, 13, 14, 15, 16, 17 ), PoolIntArray( 16, 18, 17 ), PoolIntArray( 19, 3, 6, 20, 21 ), PoolIntArray( 22, 23, 24, 21, 20, 25, 26 ), PoolIntArray( 27, 7, 11, 22, 26 ), PoolIntArray( 12, 17, 28 ), PoolIntArray( 23, 12, 28, 29 ), PoolIntArray( 23, 29, 30, 31 ), PoolIntArray( 23, 31, 24 ), PoolIntArray( 32, 26, 25, 5 ), PoolIntArray( 33, 32, 5 ), PoolIntArray( 8, 33, 5, 4, 9 ) ]
outlines = [ PoolVector2Array( 3, 160, 5, 389, 67, 416, 125, 464, 201, 511, 228, 537, 228, 566, 202, 599, 259, 593, 401, 605, 603, 601, 605, 510, 466, 419, 599, 323, 593, 298, 103, 21, 57, 35 ), PoolVector2Array( 256, 200, 142, 278, 299, 375, 392, 433, 565, 336, 300, 175 ), PoolVector2Array( 33, 177, 188, 89, 296, 156, 145, 255 ), PoolVector2Array( 58, 372, 83, 350, 315, 496, 277, 522 ), PoolVector2Array( 1, 2, 5, 64, 89, 20 ) ]

[node name="main" type="Node"]
script = ExtResource( 6 )
grape = ExtResource( 4 )
mushroom = ExtResource( 8 )

[node name="grey" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 600.0
color = Color( 0.313726, 0.270588, 0.270588, 1 )

[node name="tutorial" parent="." instance=ExtResource( 10 )]
visible = false

[node name="background_1" parent="." instance=ExtResource( 3 )]

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 64, 275 )
scale = Vector2( 0.33, 0.33 )

[node name="produce_aisle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="aisle" parent="." instance=ExtResource( 5 )]

[node name="mushroomTimer" type="Timer" parent="."]

[node name="grapeTimer" type="Timer" parent="."]

[node name="grapePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="grapeSpawnLocation" type="PathFollow2D" parent="grapePath"]
position = Vector2( 17, 185 )
rotation = 0.625675

[node name="gameover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="HUD" parent="." instance=ExtResource( 9 )]

[node name="start_menu" type="Area2D" parent="."]
z_index = 3

[node name="menu" type="TextureRect" parent="start_menu"]
margin_right = 600.0
margin_bottom = 600.0
texture = ExtResource( 11 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="start_menu"]
shape = SubResource( 2 )

[node name="start_position" type="Position2D" parent="."]
position = Vector2( 63, 275 )

[node name="victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="pepper" parent="." instance=ExtResource( 13 )]
visible = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
position = Vector2( -2, -2 )
navpoly = SubResource( 3 )

[connection signal="done" from="tutorial" to="." method="_on_tutorial_done"]
[connection signal="hit" from="player" to="." method="_on_player_hit"]
[connection signal="victory" from="player" to="." method="_on_player_victory"]
[connection signal="timeout" from="mushroomTimer" to="." method="_on_mushroomTimer_timeout"]
[connection signal="timeout" from="grapeTimer" to="." method="_on_grapeTimer_timeout"]
[connection signal="game_over" from="HUD" to="." method="_on_HUD_game_over"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="tutorial" from="HUD" to="." method="_on_HUD_tutorial"]
[connection signal="win" from="HUD" to="." method="_on_HUD_win"]
